<resources>
    <string name="app_name">Social App</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="new_to_social_register">New to Social App? Register</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="already_a_user_login">Already a user? Login</string>
    <string name="post">POST</string>
    <string name="description">Description...</string>
    <string name="no_image_selected">No image was selected!</string>
    <string name="no_of_likes">%d likes</string>
    <string name="no_of_comments">View All %d Comments</string>
    <string name="add_a_comment">Add a comment...</string>
    <string name="no_comment_added">No comment added!</string>
    <string name="comment_added">Comment added!</string>
    <string name="delete_title">Do you want to delete?</string>
    <string name="posts">POSTS</string>
    <string name="followers">FOLLOWERS</string>
    <string name="following">FOLLOWING</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="comment_deletion_message">Comment deleted successfully!</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="comment_title">Comments</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="save">SAVE</string>
    <string name="change_photo">Change Photo</string>
    <string name="full_name">Full name</string>
    <string name="bio">Bio</string>
    <string name="settings">Settings</string>
    <string name="search">Search...</string>
    <string name="notifications">Notifications</string>
    <string name="log_out">Log-Out</string>
    <string name="options">Options</string>
    <string name="photo">Photo</string>

    <string name="upload_failed">Upload failed!</string>
    <string name="uploading">Uploading</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>