<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context=".activities.RegisterActivity">

    <LinearLayout
        android:id="@+id/register_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="12dp"
        tools:context=".Activities.RegisterActivity">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:src="@drawable/social_name" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/username"
            android:padding="10dp" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/name"
            android:padding="10dp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/email"
            android:padding="10dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:overScrollMode="ifContentScrolls"
            android:padding="10dp"
            android:scrollbars="vertical" />

        <android.widget.Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_background"
            android:padding="10dp"
            android:text="@string/register" />

        <TextView
            android:id="@+id/login_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/already_a_user_login" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>